--- a/vue-front.conf
+++ b/vue-front.conf
@@ -7,6 +7,6 @@ server {
     try_files $uri $uri/ /index.html;
   }
   location /api {
-    proxy_pass http://zhangyingsheng.xyz:3000;
+    proxy_pass http://120.77.18.215:3000;
   }
 }
